# AutoRSS

./: .gitignore  Dockerfile  README.md  app.py  core.py  pyproject.toml  requirements.txt
.streamlit/: secrets.example.toml
data/: prompts.json
data/reports/: 20260120_171152_Bioinfo.json  20260121_114502_Bioinfo.json  20260122_150005_Bioinfo.json  20260122_150005_Bioinfo.md
pages/: 1_运行分析.py  2_历史报告.py  3_提示词与配置.py
services/: config.py  git_helper.py  store.py
utils/: reporting.py  ui.py
