[project]
name = "autorss"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.3",
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.128.0",
    "feedparser>=6.0.12",
    "freshrss-api>=2.0.5",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "openai>=2.15.0",
    "schedule>=1.2.2",
    "sqlmodel>=0.0.31",
    "streamlit>=1.53.0",
    "uvicorn>=0.40.0",
]

[[tool.uv.index]]
url = "http://mirrors.aliyun.com/pypi/simple/"
default = true
